[package]
name = "neorv32-pac"
version = "0.0.1"
description = "svd2rust generated pac for the NEORV32 RISC-V Processor"
license = "ISC"
authors = ["Cruz Garcia <cruzgarcia@posteo.de>"]
edition = "2021"
repository = "https://github.com/cruzgarcia/neorv32_rust.git"

[dependencies]
bare-metal = "0.2.0"
riscv = "0.5.5"
vcell = "0.1.0"
riscv-rt = { optional = true, version = "0.7.0" }

[features]
rt = ["riscv-rt"]

[build-dependencies]
svd2rust = "0.17.0"
